Added color to layers
