# docs/swagger.json
@@ -784,6 +784,9 @@
         "internal_transport_http_layer.LayerResponse": {
             "type": "object",
             "properties": {
+                "color": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
                 },
@@ -802,6 +805,9 @@
         "internal_transport_http_layer.UpdateLayerDTO": {
             "type": "object",
             "properties": {
+                "color": {
+                    "type": "string"
+                },
                 "measurements": {
                     "type": "object",
                     "additionalProperties": true
@@ -1026,6 +1032,9 @@
         "thesis_back_internal_transport_http_layer.LayerResponse": {
             "type": "object",
             "properties": {
+                "color": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
                 },
